--- a/R09-02-Rot-HeapBinaria-environment (1).zip_expanded/.project
+++ b/R09-02-Rot-HeapBinaria-environment (1).zip_expanded/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>R09-02-Rot-HeapBinaria-environment.zip_expanded</name>
+	<name>R09-02-Rot-HeapBinaria-environment (1).zip_expanded</name>
 	<comment></comment>
 	<projects>
 	</projects>
